# FMI-wind-prediction-FL-project

./: PLANNING.md  pyproject.toml
data/processed/: adj_A.npy  adj_B.npy  artukainen.npz  isokari.npz  kaisaniemi.npz  kalbaadagrund.npz  kylmapihlaja.npz  russaro.npz  tahkoluoto.npz  uto.npz  vaasa.npz  valassaaret.npz
data/raw/: artukainen.csv  isokari.csv  kaisaniemi.csv  kalbaadagrund.csv  kylmapihlaja.csv  russaro.csv  tahkoluoto.csv  uto.csv  vaasa.csv  valassaaret.csv
data/results/: results.npz
src/fmi_wind_prediction_fl/: experiments.py  fetch_data.py  fl_algorithm.py  graph.py  main.py  plots.py  preprocess.py
