[project]
name = "fmi-wind-prediction-fl-project"
version = "0.1.0"
description = "The project studies wind speed forecasting for maritime use along Finland's southwestern coastline and archipelago. The project uses weather data from 10 FMI stations and implements a feterated learning network to predict wind speed."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fmi_wind_prediction_fl"]